--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -13,7 +13,7 @@
 <li><a href="../ro/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign Workbench/Atelierul de PartDesign (8% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../fi/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign Workbench (1% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="../sv/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign Workbench (1% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign Workbench/bg (0% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--med" title="&#1042;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082; PartDesign (63% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/PartDesign_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign Workbench (1% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -46,7 +46,7 @@
 </p>
 <h3><span id="N.C3.A1strojov.C3.A1_li.C5.A1ta_funkc.C3.AD_pomocn.C3.ADka_pro_navrhov.C3.A1n.C3.AD_d.C3.ADl.C5.AF"></span><span class="mw-headline" id="N&aacute;strojov&aacute;_li&scaron;ta_funkc&iacute;_pomocn&iacute;ka_pro_navrhov&aacute;n&iacute;_d&iacute;l&#367;">N&aacute;strojov&aacute; li&scaron;ta funkc&iacute; pomocn&iacute;ka pro navrhov&aacute;n&iacute; d&iacute;l&#367;</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Body.svg&amp;filetimestamp=20191125185840&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Body.html" title="PartDesign Body">Vytvo&#345;it t&#283;leso</a>: vytvo&#345;&iacute; objekt <a href="../Body.html" title="Body">T&#283;leso</a> v aktivn&iacute;m dokumentu a aktivuje ho.</li></ul>
-<ul><li><span id="PartDesign_CompSketches"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=PartDesign_NewSketch.svg&amp;filetimestamp=20240726125744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> New Sketch:</span></li></ul>
+<ul><li><span id="PartDesign_CompSketches"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=PartDesign_NewSketch.svg&amp;filetimestamp=20240726125744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Nov&yacute; n&aacute;&#269;rt:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_NewSketch.svg&amp;filetimestamp=20240726125744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">New Sketch</a>: creates a new sketch on a selected face or plane. If no face is selected while this tool is executed, the user is prompted to select a plane from the Tasks panel. The interface then switches to the <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher Workbench</a> in sketch editing mode.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_MapSketch.svg&amp;filetimestamp=20231231201639&amp;.html" class="mw-file-description"><img src="../File/Sketcher_MapSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_MapSketch.html" title="Sketcher MapSketch">Attach Sketch</a>: attaches a sketch to geometry selected from the active body.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_EditSketch.svg&amp;filetimestamp=20231231201543&amp;.html" class="mw-file-description"><img src="../File/Sketcher_EditSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_EditSketch.html" title="Sketcher EditSketch">Edit Sketch</a>: opens the selected sketch for editing.</li></ul></dd></dl>
@@ -183,12 +183,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119204126
+Cached time: 20260119204211
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.268 seconds
-Real time usage: 1.285 seconds
+CPU time usage: 0.196 seconds
+Real time usage: 0.549 seconds
 Preprocessor visited node count: 462/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -199,18 +199,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   85.048      1 -total
- 29.31%   24.930      1 Template:PartDesign_Tools_navi/cs
- 26.00%   22.110      1 Template:Userdocnavi/cs
- 23.16%   19.698      2 Template:Navigation_menu_2
- 15.80%   13.437      2 Template:Docnav
-  9.75%    8.291      1 Template:MenuCommand
-  9.60%    8.161      1 Template:TOCright
-  4.62%    3.930      1 Template:Version
-  3.40%    2.893      5 Template:VersionPlus
+100.00%   50.352      1 -total
+ 31.51%   15.866      1 Template:PartDesign_Tools_navi/cs
+ 26.13%   13.156      1 Template:Userdocnavi/cs
+ 10.71%    5.393      2 Template:Docnav
+ 10.14%    5.105      2 Template:Navigation_menu_2
+  8.22%    4.138      1 Template:Version
+  7.51%    3.781      1 Template:TOCright
+  6.46%    3.254      1 Template:MenuCommand
+  4.50%    2.266      5 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119204125 and revision id 1741161. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119204210 and revision id 1741163. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
