--- a/wiki/fr/TechDraw_HorizontalExtentDimension.html
+++ b/wiki/fr/TechDraw_HorizontalExtentDimension.html
@@ -13,7 +13,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -24,7 +23,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Dimensions &rarr; Ins&eacute;rer une cote &eacute;tendue horizontale
+<td class="ctEven">TechDraw &rarr; Cotes &rarr; Cote &eacute;tendue horizontale
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Cote &eacute;tendue horizontale</b> ajoute une cote lin&eacute;aire &agrave; une vue. La cote s'&eacute;tend du point le plus &agrave; gauche des objets s&eacute;lectionn&eacute;s jusqu'au point le plus &agrave; droite.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension_Horizontal_Extent_example.png&amp;filetimestamp=20191012024142&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension_Horizontal_Extent_example.png" decoding="async" width="400" height="228" class="mw-file-element" data-file-width="611" data-file-height="349"></a></span>
@@ -165,15 +163,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119203950
+Cached time: 20260119204233
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.283 seconds
-Preprocessor visited node count: 487/1000000
-Post&#8208;expand include size: 27266/2097152 bytes
-Template argument size: 11451/2097152 bytes
+CPU time usage: 0.096 seconds
+Real time usage: 0.140 seconds
+Preprocessor visited node count: 486/1000000
+Post&#8208;expand include size: 27230/2097152 bytes
+Template argument size: 11415/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -181,19 +179,19 @@ Unstrip post&#8208;expand size: 5159/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   60.394      1 -total
- 17.54%   10.595      1 Template:TechDraw_Tools_navi/fr
- 14.88%    8.988      1 Template:Userdocnavi/fr
- 14.06%    8.489      2 Template:Navigation_menu_2
- 10.55%    6.369      1 Template:PropertyData
-  8.14%    4.918      1 Template:Value
-  7.73%    4.669      1 Template:GuiCommand/fr
-  6.62%    3.998      2 Template:Docnav/fr
-  6.39%    3.859      1 Template:Variable
-  6.34%    3.830      1 Template:Code
+100.00%   27.892      1 -total
+ 18.35%    5.119      1 Template:TechDraw_Tools_navi/fr
+ 15.17%    4.232      2 Template:Navigation_menu_2
+ 10.29%    2.871      1 Template:PropertyData
+  9.16%    2.555      1 Template:Userdocnavi/fr
+  8.11%    2.263      1 Template:Value
+  8.05%    2.246      1 Template:GuiCommand/fr
+  7.94%    2.215      2 Template:Docnav/fr
+  6.85%    1.910      1 Template:Code
+  6.61%    1.844      1 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:161889-0!canonical and timestamp 20260119203950 and revision id 1741159. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:161889-0!canonical and timestamp 20260119204233 and revision id 1741165. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
