--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -47,7 +47,7 @@
 <h3><span id="N.C3.A1strojov.C3.A1_li.C5.A1ta_funkc.C3.AD_pomocn.C3.ADka_pro_navrhov.C3.A1n.C3.AD_d.C3.ADl.C5.AF"></span><span class="mw-headline" id="N&aacute;strojov&aacute;_li&scaron;ta_funkc&iacute;_pomocn&iacute;ka_pro_navrhov&aacute;n&iacute;_d&iacute;l&#367;">N&aacute;strojov&aacute; li&scaron;ta funkc&iacute; pomocn&iacute;ka pro navrhov&aacute;n&iacute; d&iacute;l&#367;</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Body.svg&amp;filetimestamp=20191125185840&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Body.html" title="PartDesign Body">Vytvo&#345;it t&#283;leso</a>: vytvo&#345;&iacute; objekt <a href="../Body.html" title="Body">T&#283;leso</a> v aktivn&iacute;m dokumentu a aktivuje ho.</li></ul>
 <ul><li><span id="PartDesign_CompSketches"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=PartDesign_NewSketch.svg&amp;filetimestamp=20240726125744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Nov&yacute; n&aacute;&#269;rt:</span></li></ul>
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_NewSketch.svg&amp;filetimestamp=20240726125744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">New Sketch</a>: creates a new sketch on a selected face or plane. If no face is selected while this tool is executed, the user is prompted to select a plane from the Tasks panel. The interface then switches to the <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher Workbench</a> in sketch editing mode.</li></ul></dd></dl>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_NewSketch.svg&amp;filetimestamp=20240726125744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Nov&yacute; n&aacute;&#269;rt</a>: vytvo&#345;&iacute; nov&yacute; n&aacute;&#269;rt na vybran&eacute; plo&scaron;e nebo rovin&#283;. Pokud p&#345;i spu&scaron;t&#283;n&iacute; tohoto n&aacute;stroje nen&iacute; vybr&aacute;na &#382;&aacute;dn&aacute; plocha, u&#382;ivatel je vyzv&aacute;n k v&yacute;b&#283;ru roviny z panelu &Uacute;koly. Rozhran&iacute; se pot&eacute; p&#345;epne do re&#382;imu &uacute;prav n&aacute;&#269;rt&#367; <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">pracovn&iacute; plochy Sketcher</a>.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_MapSketch.svg&amp;filetimestamp=20231231201639&amp;.html" class="mw-file-description"><img src="../File/Sketcher_MapSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_MapSketch.html" title="Sketcher MapSketch">Attach Sketch</a>: attaches a sketch to geometry selected from the active body.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_EditSketch.svg&amp;filetimestamp=20231231201543&amp;.html" class="mw-file-description"><img src="../File/Sketcher_EditSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_EditSketch.html" title="Sketcher EditSketch">Edit Sketch</a>: opens the selected sketch for editing.</li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ValidateSketch.svg&amp;filetimestamp=20231231201854&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ValidateSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Validate Sketch</a>: verifies the tolerance of different points and adjusts them.</li></ul>
@@ -183,12 +183,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119204211
+Cached time: 20260119204421
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.196 seconds
-Real time usage: 0.549 seconds
+CPU time usage: 0.223 seconds
+Real time usage: 0.501 seconds
 Preprocessor visited node count: 462/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -199,18 +199,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.352      1 -total
- 31.51%   15.866      1 Template:PartDesign_Tools_navi/cs
- 26.13%   13.156      1 Template:Userdocnavi/cs
- 10.71%    5.393      2 Template:Docnav
- 10.14%    5.105      2 Template:Navigation_menu_2
-  8.22%    4.138      1 Template:Version
-  7.51%    3.781      1 Template:TOCright
-  6.46%    3.254      1 Template:MenuCommand
-  4.50%    2.266      5 Template:VersionPlus
+100.00%   50.911      1 -total
+ 46.12%   23.478      1 Template:Userdocnavi/cs
+ 17.95%    9.137      1 Template:MenuCommand
+ 17.54%    8.930      1 Template:PartDesign_Tools_navi/cs
+  9.72%    4.946      2 Template:Navigation_menu_2
+  4.94%    2.516      5 Template:VersionPlus
+  4.46%    2.272      2 Template:Docnav
+  4.30%    2.189      1 Template:TOCright
+  2.78%    1.416      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119204210 and revision id 1741163. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119204421 and revision id 1741169. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
